--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,8 @@ albumentations>=1.3.0
 scikit-learn>=1.1.0
 tqdm>=4.64.0
 opencv-python>=4.6.0
-Pillow>=9.0.0 
+Pillow>=9.0.0
+flask>=2.0.0
+werkzeug>=2.0.0
+keras-cv-attention-models>=1.0.7
+requests>=2.0.0 
