--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-tensorflow>=2.10.0
-tensorflow-addons>=0.19.0
+tensorflow==2.15.*
+tensorflow-addons==0.23.0
+typeguard<3
+inflect<7.5
 keras>=2.10.0
 numpy>=1.21.0
 albumentations>=1.3.0
