--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tensorflow==2.15.*
-tensorflow-addons==0.23.0
+tensorflow==2.12.0
+tensorflow-addons==0.22.0
 typeguard<3
 inflect<7.5
 keras>=2.10.0
