--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-tensorflow==2.12.0
-tensorflow-addons==0.22.0
-typeguard<3
-inflect<7.5
-keras>=2.10.0
-numpy>=1.21.0
+tensorflow==2.18.*
+tensorflow-addons==0.26.*
+typeguard>=4.0.1
+inflect>=7.5
+numpy>=1.26
 albumentations>=1.3.0
-scikit-learn>=1.1.0
-tqdm>=4.64.0
-opencv-python>=4.6.0
-Pillow>=9.0.0
-flask>=2.0.0
-werkzeug>=2.0.0
+scikit-learn>=1.3.0
+tqdm>=4.66.0
+opencv-python>=4.8.0
+Pillow>=10.0.0
+flask>=2.3.0
+werkzeug>=2.3.0
 keras-cv-attention-models>=1.0.7
-requests>=2.0.0 
+requests>=2.0.0
