--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-tensorflow==2.18.*
-tensorflow-addons==0.26.*
-typeguard>=4.0.1
-inflect>=7.5
-numpy>=1.26
-albumentations>=1.3.0
-scikit-learn>=1.3.0
-tqdm>=4.66.0
-opencv-python>=4.8.0
-Pillow>=10.0.0
-flask>=2.3.0
-werkzeug>=2.3.0
-keras-cv-attention-models>=1.0.7
+# requirements.txt  (clean)
+tensorflow==2.15.*
+tensorflow-addons==0.23.*
+typeguard<3
+inflect<7.5
+# (no standalone "keras" line)
+numpy==1.26.4           # works with TF 2.15 wheels
+albumentations==1.3.0
+scikit-learn==1.3.0
+tqdm==4.66.2
+opencv-python==4.9.0.80
+Pillow==10.3.0
+flask==2.3.3
+werkzeug==2.3.8
+keras-cv-attention-models==1.0.7
 requests>=2.0.0
