--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# requirements.txt  (clean)
 tensorflow==2.15.*
 tensorflow-addons==0.23.*
 typeguard<3
 inflect<7.5
-# (no standalone "keras" line)
-numpy==1.26.4           # works with TF 2.15 wheels
+numpy==1.26.4           
 albumentations==1.3.0
 scikit-learn==1.3.0
 tqdm==4.66.2
@@ -12,5 +10,5 @@ opencv-python==4.9.0.80
 Pillow==10.3.0
 flask==2.3.3
 werkzeug==2.3.8
-keras-cv-attention-models==1.0.7
+keras-cv-attention-models>=1.3.0
 requests>=2.0.0
