--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-tensorflow==2.15.*
-tensorflow-addons==0.23.*
-typeguard<3
-inflect<7.5
-numpy==1.26.4           
+numpy>=1.22,<1.24
+opencv-python>=4.5.0
+tensorflow==2.12.0
+tensorflow-addons==0.22.0
+         
 albumentations==1.3.0
 scikit-learn==1.3.0
 tqdm==4.66.2
-opencv-python==4.9.0.80
 Pillow==10.3.0
 flask==2.3.3
-werkzeug==2.3.8
-keras-cv-attention-models>=1.3.0
+werkzeug>=2.3.0
+
+keras
+keras-cv-attention-models
 requests>=2.0.0
